--- a/example/anime.html
+++ b/example/anime.html
@@ -17,13 +17,13 @@
     <div class="a"></div>
 
     <script type="module">
-        import Axi from '../lib/index.js'
-        new Axi({
-            autoPlay: true,
-            target: '.a',
-            width: 400,
-            easing: 'expo'
-        })
+        import anime from './anime.es.js'
+
+        anime({
+            targets: '.a',
+            width: '100px',
+            rotate: 540 // -> '540deg'
+        });
     </script>
 </body>
 </html>
