chore: add rollup bundler

--- a/example/index.html
+++ b/example/index.html
@@ -17,7 +17,8 @@
     <div class="a"></div>
 
     <script type="module">
-        import Axi from '../lib/index.js'
+        import Axi from '../lib/axi.es.js'
+
         new Axi({
             autoPlay: true,
             target: '.a',
