feat: parse tweens of animation

--- a/example/anime.html
+++ b/example/anime.html
@@ -22,8 +22,11 @@
 
         anime({
             targets: '.a',
-            left: '240px',
+            // left: '240px',
             // backgroundColor: '#FFF',
+            duration: 4000,
+            delay: 1400,
+            endDelay: 1000,
             borderRadius: ['0%', '50%', '20%'], 
             easing: 'easeInOutQuad'
         });
