feat: update tween value of type: transform

--- a/example/anime.html
+++ b/example/anime.html
@@ -24,11 +24,8 @@
             targets: '.a',
             // left: '240px',
             // backgroundColor: '#FFF',
-            duration: 4000,
-            delay: 1400,
-            endDelay: 1000,
-            borderRadius: ['0%', '50%', '20%'], 
-            easing: 'easeInOutQuad'
+            translateX: 270
+            // easing: 'easeInOutQuad'
         });
     </script>
 </body>
