fix: change name of easing func

--- a/example/anime.html
+++ b/example/anime.html
@@ -24,8 +24,8 @@
             targets: '.a',
             // left: '240px',
             // backgroundColor: '#FFF',
-            translateX: 270
-            // easing: 'easeInOutQuad'
+            translateX: 270,
+            easing: 'easeOutElastic'
         });
     </script>
 </body>
