feat: update easing funcs

--- a/example/anime.html
+++ b/example/anime.html
@@ -23,9 +23,9 @@
         anime({
             targets: '.a',
             // left: '240px',
-            // backgroundColor: '#FFF',
-            translateX: 270,
-            easing: 'easeOutElastic'
+            backgroundColor: '#FF0',
+            // translateX: 270,
+            easing: 'easeOutElastic(5, .1)'
         });
     </script>
 </body>
