--- a/example/index.html
+++ b/example/index.html
@@ -35,22 +35,22 @@
             autoPlay: true,
             target: '.a',
             left: 500,
-            easing: 'easeInExpo'
+            // easing: 'easeInExpo'
         })
         new Axi({
             autoPlay: true,
             target: '.b',
             left: 500,
-            easing: 'easeOutElastic'
+            easing: 'easeInBack'
         })
-        new Axi({
-            autoPlay: true,
-            target: '.c',
-            translateX: '500px',
-            scale: 2,
-            rotate: '1turn',
-            easing: 'easeOutElastic'
-        })
+        // new Axi({
+        //     autoPlay: true,
+        //     target: '.c',
+        //     translateX: '500px',
+        //     scale: 2,
+        //     rotate: '1turn',
+        //     easing: 'easeOutElastic'
+        // })
     </script>
 </body>
 </html>
