feat: add direction option

--- a/example/anime.html
+++ b/example/anime.html
@@ -25,6 +25,8 @@
             // left: '240px',
             backgroundColor: '#FF0',
             // translateX: 270,
+            delay: 100,
+            endDelay: 100,
             easing: 'easeOutElastic(5, .1)'
         });
     </script>
