--- a/example/index.html
+++ b/example/index.html
@@ -41,16 +41,20 @@
             target: '.a',
             left: 300,
             duration: 3000,
+            autoPlay: false,
             loop: true,
-            direction: 'reverse'
+            direction: 'reverse',
+            easing: 'linear'
         })
 
-        // anime({
-        //     targets: '.b',
-        //     left: 500,
-        //     duration: 3000,
-        //     loop: true
-        // })
+        anime({
+            targets: '.b',
+            left: 500,
+            duration: 3000,
+            // direction: 'reverse'
+            // direction: 'alternate',
+            // loop: true
+        })
 
         document.querySelector('.start').addEventListener('click', () => {
             a.play()
@@ -63,7 +67,7 @@
         })
         document.querySelector('.range').addEventListener('input', (e) => {
             console.log(e.target.value / 100)
-            a.seek(e.target.value / 100 * 6000)
+            a.seek(e.target.value / 100)
         })
 
         // new Axi({
