--- a/example/index.html
+++ b/example/index.html
@@ -13,13 +13,16 @@
             background-color: rgb(46, 236, 46);
             position: relative;
         }
+        .a {
+            top: 50px;
+        }
         .b {
             background-color: rgb(228, 66, 66);
-            top: 50px;
+            top: 100px;
         }
         .c {
             background-color: rgb(45, 230, 236);
-            top: 100px;
+            top: 150px;
         }
     </style>
 </head>
@@ -51,12 +54,12 @@
                 duration: 1800,
                 easing: 'easeInOutSine'
             },
-            // scale: {
-            //     value: 2,
-            //     duration: 1600,
-            //     delay: 800,
-            //     easing: 'easeInOutQuart'
-            // },
+            scale: {
+                value: 2,
+                duration: 1600,
+                delay: 800,
+                easing: 'easeInOutQuart'
+            },
             delay: 250
             // easing: 'linear'
         })
