--- a/example/index.html
+++ b/example/index.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <h1>Inspired by <a href="https://github.com/juliangarnier/anime">anime</a>.</h1>
     <script src="../lib/axi.umd.js"></script>
-    <script src="./demoCreator.js"></script>
+    <script src="./utils.js"></script>
     <script src="./targets.js"></script>
     <script src="./property-params.js"></script>
+    <script src="./properties.js"></script>
+    <script src="./easings.js"></script>
 </body>
 </html>
