--- a/example/index.html
+++ b/example/index.html
@@ -14,5 +14,6 @@
     <script src="./property-params.js"></script>
     <script src="./properties.js"></script>
     <script src="./easings.js"></script>
+    <script src="./hooks.js"></script>
 </body>
 </html>
