--- a/example/anime.html
+++ b/example/anime.html
@@ -21,48 +21,66 @@
     <div class="e"></div>
     <div class="f"></div>
 
+    <svg width="256" height="112" viewBox="0 0 256 112">
+        <path fill="none" stroke="currentColor" stroke-width="1" d="M8,56 C8,33.90861 25.90861,16 48,16 C70.09139,16 88,33.90861 88,56 C88,78.09139 105.90861,92 128,92 C150.09139,92 160,72 160,56 C160,40 148,24 128,24 C108,24 96,40 96,56 C96,72 105.90861,92 128,92 C154,93 168,78 168,56 C168,33.90861 185.90861,16 208,16 C230.09139,16 248,33.90861 248,56 C248,78.09139 230.09139,96 208,96 L48,96 C25.90861,96 8,78.09139 8,56 Z"></path>
+      </svg>
+
     <script type="module">
         import anime from './anime.es.js'
-        const el = document.querySelector('.b')
-        const el2 = document.querySelector('.c')
-        const progress = document.querySelector('.d')
-        const el3 = document.querySelector('.e')
-        const el4 = document.querySelector('.f')
-
-        var loopBegan = 0;
-        var loopCompleted = 0;
-        var changeBegan = 0;
-        var changeCompleted = 0;
-
+        var path = anime.path('path');
+        const x = path('x')
+        const y = path('y')
 
         anime({
-            targets: '.a',
-            loopBegin: function(anim) {
-                loopBegan++;
-                el.innerHTML = 'loop began : ' + loopBegan;
-            },
-            loopComplete: function(anim) {
-                loopCompleted++;
-                el2.innerHTML = 'loop completed : ' + loopCompleted;
-            },
-            translateX: 240,
-            delay: 1000,
-            endDelay: 1000,
-            // loop: true,
-            direction: 'alternate',
-            easing: 'easeInOutCirc',
-            update: function(anim) {
-                progress.innerHTML = 'progress : '+Math.round(anim.progress)+'%';
-            },
-            changeBegin: function(anim) {
-                changeBegan++;
-                el3.innerHTML = 'change began : ' + changeBegan;
-            },
-            changeComplete: function(anim) {
-                changeCompleted++;
-                el4.innerHTML = 'change completed : ' + changeCompleted;
-            }
+        targets: '.a',
+        translateX: x,
+        translateY: y,
+        rotate: path('angle'),
+        easing: 'linear',
+        duration: 2000,
+        loop: true
         });
+
+        // const el = document.querySelector('.b')
+        // const el2 = document.querySelector('.c')
+        // const progress = document.querySelector('.d')
+        // const el3 = document.querySelector('.e')
+        // const el4 = document.querySelector('.f')
+
+        // var loopBegan = 0;
+        // var loopCompleted = 0;
+        // var changeBegan = 0;
+        // var changeCompleted = 0;
+
+
+        // anime({
+        //     targets: '.a',
+        //     loopBegin: function(anim) {
+        //         loopBegan++;
+        //         el.innerHTML = 'loop began : ' + loopBegan;
+        //     },
+        //     loopComplete: function(anim) {
+        //         loopCompleted++;
+        //         el2.innerHTML = 'loop completed : ' + loopCompleted;
+        //     },
+        //     translateX: 240,
+        //     delay: 1000,
+        //     endDelay: 1000,
+        //     // loop: true,
+        //     direction: 'alternate',
+        //     easing: 'easeInOutCirc',
+        //     update: function(anim) {
+        //         progress.innerHTML = 'progress : '+Math.round(anim.progress)+'%';
+        //     },
+        //     changeBegin: function(anim) {
+        //         changeBegan++;
+        //         el3.innerHTML = 'change began : ' + changeBegan;
+        //     },
+        //     changeComplete: function(anim) {
+        //         changeCompleted++;
+        //         el4.innerHTML = 'change completed : ' + changeCompleted;
+        //     }
+        // });
 
     </script>
 </body>
