--- a/example/index.html
+++ b/example/index.html
@@ -10,6 +10,7 @@
     <h1>Inspired by <a href="https://github.com/juliangarnier/anime">anime</a>.</h1>
     <script src="../lib/axi.umd.js"></script>
     <script src="./utils.js"></script>
+    <script src="./svg.js"></script>
     <script src="./targets.js"></script>
     <script src="./property-params.js"></script>
     <script src="./properties.js"></script>
