fix: reset lasttime at restart method.

--- a/example/index.html
+++ b/example/index.html
@@ -65,5 +65,9 @@
     <script src="./properties.js"></script>
     <script src="./easings.js"></script>
     <script src="./hooks.js"></script>
+
+    <script>
+        document.querySelector('.demo-collection .demo').click()
+    </script>
 </body>
 </html>
