--- a/example/index.html
+++ b/example/index.html
@@ -36,6 +36,7 @@
         const navSection = document.querySelector('.nav')
         const demoSection = document.querySelector('.demo-collection')
         const codeExpSection = document.querySelector('.code-example .content .code')
+        const category = document.querySelector('.header .category')
         const demoTitle = document.querySelector('.header .demo-title')
 
         let runningAxiDemo
