docs: change directory structure

--- a/example/index.html
+++ b/example/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./code-example.css">
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/code-example.css" />
+    <link rel="stylesheet" href="./styles/colors.css" />
 </head>
 <body>
     <div class="main">
@@ -60,12 +61,12 @@
     <script src="./highlight.pack.js"></script>
     <script src="../lib/axi.umd.js"></script>
     <script src="./utils.js"></script>
-    <script src="./svg.js"></script>
-    <script src="./targets.js"></script>
-    <script src="./property-params.js"></script>
-    <script src="./properties.js"></script>
-    <script src="./easings.js"></script>
-    <script src="./hooks.js"></script>
+    <script src="./demos/svg.js"></script>
+    <script src="./demos/targets.js"></script>
+    <script src="./demos/property-params.js"></script>
+    <script src="./demos/properties.js"></script>
+    <script src="./demos/easings.js"></script>
+    <script src="./demos/hooks.js"></script>
 
     <script>
         document.querySelector('.demo-collection .demo').click()
