--- a/example/index.html
+++ b/example/index.html
@@ -64,6 +64,7 @@
     <script src="./demos/svg.js"></script>
     <script src="./demos/targets.js"></script>
     <script src="./demos/property-params.js"></script>
+    <script src="./demos/animation-params.js"></script>
     <script src="./demos/properties.js"></script>
     <script src="./demos/easings.js"></script>
     <script src="./demos/hooks.js"></script>
