--- a/example/index.html
+++ b/example/index.html
@@ -65,6 +65,7 @@
     <script src="./demos/targets.js"></script>
     <script src="./demos/property-params.js"></script>
     <script src="./demos/animation-params.js"></script>
+    <script src="./demos/values.js"></script>
     <script src="./demos/properties.js"></script>
     <script src="./demos/easings.js"></script>
     <script src="./demos/hooks.js"></script>
