fix: change target param to targets

--- a/example/index.html
+++ b/example/index.html
@@ -68,6 +68,7 @@
     <script src="./demos/property-params.js"></script>
     <script src="./demos/animation-params.js"></script>
     <script src="./demos/values.js"></script>
+    <script src="./demos/keyframes.js"></script>
     <script src="./demos/properties.js"></script>
     <script src="./demos/easings.js"></script>
     <script src="./demos/hooks.js"></script>
